--- a/Exercise/Lesson7/7b.html
+++ b/Exercise/Lesson7/7b.html
@@ -10,14 +10,14 @@
  
 
   <script>
-    function greet(){
-      console.log('Hello!')
+
+    function greet(name){
+      console.log(`Hello ${name}`)
     }
 
-    greet();
-    greet();
+    greet('Jitesh');
+    greet('Sonu');
     
-
   </script>
   </body>
 </html>
