--- a/javascriptCode/08-rock-paper-scissor.html
+++ b/javascriptCode/08-rock-paper-scissor.html
@@ -21,39 +21,64 @@
     playGame('scissors');
   ">Scissors</button>
 
+  <button onclick="
+    score.win = 0;
+    score.loss = 0;
+    score.tie = 0;
+    localStorage.removeItem('Score');
+  "
+  >Reset Score</button>
+
   <script>
 
+    const score= JSON.parse(localStorage.getItem('score')) ||{
+      win: 0,
+      loss: 0,
+      tie: 0
+    };
+     
     function playGame(playerMove){
       const computerMove = pickComputerMove();
 
       let result = '';
-      if(playerMove === 'scissors'){ 
+      if(playerMove === 'scissors'){
         if(computerMove === 'rock'){
-          result = 'You Lose.'
+          result = 'You Lose.';
         }else if(computerMove === 'paper'){
-          result = 'You Win.'
-        }else if(computerMove === 'scissor'){
-          result = 'Its a Tie.'
+          result = 'You Win.';
+        }else if(computerMove === 'scissors'){
+          result = 'Its a Tie.';
         }
       }else if(playerMove === 'paper'){
         if(computerMove === 'rock'){
-          result = 'You Win.'
+          result = 'You Win.';
         }else if(computerMove === 'paper'){
-          result = 'Its a Tie.'
-        }else if(computerMove === 'scissor'){
-          result = 'You Lose.'
+          result = 'Its a Tie.';
+        }else if(computerMove === 'scissors'){
+          result = 'You Lose.';
         }
       }else if(playerMove === 'rock'){
         if(computerMove === 'rock'){
-          result = 'Its a Tie.'
+          result = 'Its a Tie.';
         }else if(computerMove === 'paper'){
-          result = 'You Lose.'
-        }else if(computerMove === 'scissor'){
-          result = 'You win.'
+          result = 'You Lose.';
+        }else if(computerMove === 'scissors'){
+          result = 'You Win.';
         }
       }
 
-      alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`)
+      if(result === 'You Win.'){
+        score.win += 1;
+      }else if(result === 'You Lose.'){
+        score.loss += 1;
+      }else if(result === 'Its a Tie.'){
+        score.tie += 1;
+      }
+
+      localStorage.setItem('score',JSON.stringify(score));
+
+      alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
+Wins: ${score.win},Losses: ${score.loss},Ties: ${score.tie}`)
     }
     
     function pickComputerMove(){
@@ -64,7 +89,7 @@
       }else if(randomNumber > 1/3 && randomNumber < 2/3){
         computerMove = 'paper';
       }else if(randomNumber >= 2/3 && randomNumber < 1){
-        computerMove = 'scissor';
+        computerMove = 'scissors';
       }
 
       return computerMove;
